# skill4

./: README.md
oa-fault-feature-discovery/: SKILL.md
oa-fault-feature-discovery/assets/: default.yaml  feature_cols.txt
oa-fault-feature-discovery/models/default_run/: run_summary.json
oa-fault-feature-discovery/models/default_run/generator/: vae.pt
oa-fault-feature-discovery/models/default_run/predictor/: model.best.pt  threshold_metrics.json
oa-fault-feature-discovery/references/: morph-correction.md  physical-constraints.md  report-guidelines.md
oa-fault-feature-discovery/references/data-pipeline/: data-inspection-and-preprocessing.md
oa-fault-feature-discovery/references/model/: model-selection.md
oa-fault-feature-discovery/references/semantic-coupling/: field-semantics.md
oa-fault-feature-discovery/scripts/: check_env.py  run_oa_fault_discovery.py
oa-fault-feature-discovery/scripts/optical-amplifier-fault-discovery/: pyproject.toml  requirements.txt
oa-fault-feature-discovery/scripts/optical-amplifier-fault-discovery/configs/: default.yaml  fake_quick.yaml
oa-fault-feature-discovery/scripts/optical-amplifier-fault-discovery/scripts/: analyze_run.py  check_env.py  discover_hidden_features.py  make_fake_oa_dataset.py  prepare_analysis_run.py  prepare_data.py  train_all.py  train_generator.py  train_predictor.py
oa-fault-feature-discovery/scripts/optical-amplifier-fault-discovery/src/oa_fault/: config.py  coupling_features.py  datasets.py  hidden_features.py  models.py  preprocessing.py  train_generator.py  train_predictor.py
