[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optical-amplifier-fault-discovery"
version = "0.1.0"
description = "Industrial time-series fault-risk and precursor discovery for optical amplifier telemetry."
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "torch",
  "PyYAML",
  "pyarrow",
  "openpyxl",
  "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
